--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -7,7 +7,7 @@
 
 % Use the wording given in the official list of degrees awarded by UCI:
 % http://www.rgs.uci.edu/grad/academic/degrees_offered.htm
-\degreefield{Computer Science}
+\degreefield{Statistics}
 
 % Your name as it appears on official UCI records.
 \authorname{Your name}
