--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -10,7 +10,7 @@
 \degreefield{Statistics}
 
 % Your name as it appears on official UCI records.
-\authorname{Your name}
+\authorname{Yannan Tang}
 
 % Use the full name of each committee member and full title 
 % (e.g. Professor/Associate Professor).
