--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,5 +1,7 @@
 \chapter{Introduction}
 
+In epidemiology studies, geospatial disparities of certain disease risks are of common interest since the potential unequal risks could be a result of location-related risk factors. These factors could be environmental, demographic, socioeconomic among others. Thus, spatial epidemiologists frequently aim to estimate a risk pattern over an area under study, which is frequently a residential geospatial area. 
+
 This is an example using the \LaTeX{} template for UCI theses and
 dissertation documents \cite{uci-thesis-latex}. Figure
 \ref{fig:sourcecode} is just for illustration purposes, as is Table
