First Success with Miktex

--- a/thesis.tex
+++ b/thesis.tex
@@ -94,6 +94,7 @@
 % Include the different components of your thesis, in separate files.
 % Using \include allows you to set \includeonly above.
 \include{chapter1}
+\include{chapter2}
 %\include{chapter2}
 % ... and so on
 
